--- a/center-server/src/main/resources/application-pro.properties
+++ b/center-server/src/main/resources/application-pro.properties
@@ -4,7 +4,6 @@ spring.output.ansi.enabled=ALWAYS
 ZoneList.FileName=Servers-pro.json
 #根目录配置,上传excel用
 App.Path=/root/cai/excel
-spring.resources.static-locations=/root/cai/excel
 #数据库配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/centerdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
@@ -12,3 +11,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# --spring.config.location
