--- a/center-server/src/main/resources/application.properties
+++ b/center-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.output.ansi.enabled=ALWAYS
 #区服列表配置
 ZoneList.FileName=Servers.json
 #根目录配置,上传excel用
-App.Path=E:\\cai-code\\code\\gproject\\center-server\\target\\classes
+App.Path=E:\\cai-code\\git\\gproject\\center-server\\target\\1.0\\classes
 #数据库配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/centerdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
