--- a/center-server/src/main/resources/application.properties
+++ b/center-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 spring.output.ansi.enabled=ALWAYS
-#区服列表配置
-ZoneList.FileName=Servers.json
+#资源服配置
+resUrl=http://127.0.0.1:9090/excel/cai
 #根目录配置,上传excel用
 #数据库配置
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/centerdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
