--- a/center-server/src/main/resources/application.properties
+++ b/center-server/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+jetcache.statIntervalMinutes=15
+jetcache.areaInCacheName=false
+jetcache.local.default.type=linkedhashmap
+jetcache.local.default.limit=5000
+jetcache.local.default.keyConvertor=fastjson
+jetcache.local.default.expireAfterWriteInMillis=1800000
 # --spring.config.location
