--- a/gproject-gate/src/main/resources/application.properties
+++ b/gproject-gate/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # --spring.config.location
+jetcache.statIntervalMinutes=15
+jetcache.areaInCacheName=false
+jetcache.local.default.type=linkedhashmap
+jetcache.local.default.limit=5000
+jetcache.local.default.keyConvertor=fastjson
+jetcache.local.default.expireAfterWriteInMillis=1800000
