--- a/gproject-center/res/application.properties
+++ b/gproject-center/res/application.properties
@@ -10,6 +10,9 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
 jetcache.statIntervalMinutes=15
 jetcache.areaInCacheName=false
 jetcache.local.default.type=linkedhashmap
