--- a/pom.xml
+++ b/pom.xml
@@ -122,14 +122,14 @@
 				</excludes>
 				<targetPath>BOOT-INF/classes/</targetPath>
 			</resource>
-			<!-- 打包lib下的jar包 -->
+			<!-- 打包lib下的jar包 
 			<resource>
 				<directory>lib</directory>
 				<targetPath>BOOT-INF/lib/</targetPath>
 				<includes>
 					<include>**/*.jar</include>
 				</includes>
-			</resource>
+			</resource> -->
 		</resources>
 	</build>
 
