--- a/gproject-gate/res/application.properties
+++ b/gproject-gate/res/application.properties
@@ -1,16 +1,16 @@
-server.port=9090
+server.port=9092
 spring.output.ansi.enabled=ALWAYS
 #资源服配置
-resUrl=http://127.0.0.1:9090/excel
+resUrl=http://127.0.0.1:9090/excel/cai
+serverId=1001
+master=true
 #根目录配置,上传excel用
-#数据库配置
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=123456
+# --spring.config.location
 jetcache.statIntervalMinutes=15
 jetcache.areaInCacheName=false
 jetcache.local.default.type=linkedhashmap
 jetcache.local.default.limit=5000
 jetcache.local.default.keyConvertor=fastjson
 jetcache.local.default.expireAfterWriteInMillis=1800000
-# --spring.config.location
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
