--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<url>http://maven.apache.org</url>
 
 	<modules>
-	    
+
 		<module>gproject-gate</module>
-		
+
 		<module>gproject-common</module>
 		<module>gproject-center</module>
 	</modules>
@@ -44,10 +44,7 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
@@ -59,6 +56,10 @@
 			<version>2.5.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.alicp.jetcache</groupId>
 			<artifactId>jetcache-starter-redis</artifactId>
 			<version>2.4.4</version>
@@ -67,10 +68,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
@@ -122,14 +120,8 @@
 				</excludes>
 				<targetPath>BOOT-INF/classes/</targetPath>
 			</resource>
-			<!-- 打包lib下的jar包 
-			<resource>
-				<directory>lib</directory>
-				<targetPath>BOOT-INF/lib/</targetPath>
-				<includes>
-					<include>**/*.jar</include>
-				</includes>
-			</resource> -->
+			<!-- 打包lib下的jar包 <resource> <directory>lib</directory> <targetPath>BOOT-INF/lib/</targetPath> 
+				<includes> <include>**/*.jar</include> </includes> </resource> -->
 		</resources>
 	</build>
 
